aligned dotts button in chat; fixed mixin for button more-options

--- a/src/styles/_chat.scss
+++ b/src/styles/_chat.scss
@@ -742,7 +742,7 @@
       opacity: 1;
 
       &:before {
-        @include settings-dots($secondary-color, 1);
+        @include color-settings-dots($secondary-color, 1);
       }
     }
 
